# graphplay

./: .gitignore  .projectile  CMakeLists.txt  Makefile  README.md  chair.blend  chair.dae  collada.rb  config.h.in  graphplay.sln
Debug - Console/: octohedron.dae
assets/: octohedron.blend
graphplay/: .dir-locals.el  BBox.cpp  BBox.h  BasicShader.cpp  BasicShader.h  Body.cpp  Body.h  CMakeLists.txt  Camera.cpp  Camera.h  Collada.cpp  Collada.h  Constraint.cpp  Constraint.h  DaeFile.cpp  DaeFile.h  Driver.cpp  Driver.h  Geometry.cpp  Geometry.h  Geometry.tmpl.cpp  Input.cpp  Input.h  Integrator.h  Makefile  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OpenGLUtils.cpp  OpenGLUtils.h  PhysicsSystem.cpp  PhysicsSystem.h  PlyFile.cpp  PlyFile.h  PlyFile.tmpl.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  (+13 more)
graphplay-test/: BodyTest.cpp  CMakeLists.txt  CameraTest.cpp  GeometryTest.cpp  Makefile  MaterialTest.cpp  MeshTest.cpp  PlyFileTest.cpp  SceneTest.cpp  ShaderTest.cpp  TestOpenGLContext.cpp  TestOpenGLContext.h  config.h.in  graphplay-test.vcxproj  graphplay-test.vcxproj.filters
graphplay-test/fzx/: BodyTest.cpp
graphplay-test/gfx/: CameraTest.cpp  GeometryTest.cpp  MeshTest.cpp  SceneTest.cpp  ShaderTest.cpp  TestOpenGLContext.cpp  TestOpenGLContext.h
graphplay-test/load/: PlyFileTest.cpp
graphplay.xcodeproj/: project.pbxproj
graphplay.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
graphplay.xcodeproj/project.xcworkspace/xcshareddata/: graphplay.xccheckout
graphplay.xcodeproj/project.xcworkspace/xcuserdata/awatts.xcuserdatad/: UserInterfaceState.xcuserstate
graphplay.xcodeproj/xcuserdata/awatts.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
graphplay.xcodeproj/xcuserdata/awatts.xcuserdatad/xcschemes/: graphplay-test.xcscheme  graphplay.xcscheme  xcschememanagement.plist
graphplay/fzx/: BBox.cpp  BBox.h  Body.cpp  Body.h  Constraint.cpp  Constraint.h  Integrator.h  PhysicsSystem.cpp  PhysicsSystem.h
graphplay/gfx/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Geometry.tmpl.cpp  Mesh.cpp  Mesh.h  OpenGLUtils.cpp  OpenGLUtils.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h
graphplay/load/: Collada.cpp  Collada.h  PlyFile.cpp  PlyFile.h  PlyFile.tmpl.cpp
msvc/: graphplay.sln
msvc/glad/: glad.vcxproj  glad.vcxproj.filters
msvc/graphplay/: graphplay.vcxproj  graphplay.vcxproj.filters
msvc/graphplay_console/: graphplay_console.vcxproj  graphplay_console.vcxproj.filters
msvc/graphplay_engine/: graphplay_engine.vcxproj  graphplay_engine.vcxproj.filters
msvc/graphplay_test/: graphplay_test.vcxproj  graphplay_test.vcxproj.filters
msvc/gtest/: gtest.vcxproj  gtest.vcxproj.filters
msvc/gtest_main/: gtest_main.vcxproj  gtest_main.vcxproj.filters
msvc/tinyxml2/: tinyxml2.vcxproj  tinyxml2.vcxproj.filters
ruby/lib/: collada.rb  ply.rb  vector.rb
scripts/: collada.rb  ply.rb
